fix: responsive drag and drop scrollbar

--- a/style/components/taskCard.css
+++ b/style/components/taskCard.css
@@ -1,6 +1,8 @@
 .task-render-outside {
   width: 100%;
   height: auto;
+  overflow: auto;
+  scrollbar-width: none;
 }
 
 
@@ -168,5 +170,6 @@
     display: flex;
     flex-direction: row;
     overflow-y: hidden;
+    scrollbar-width: auto;
   }
 }
